# stackrox

./: .air.sensor.toml  .air.toml  .bazelrc  .bazelversion  .coderabbit.yaml  .containerignore  .dockerignore  .editorconfig  .gitattributes  .gitguardian.yaml  .gitignore  .gitleaks.toml  .gitmodules  .golangci.yml  .htpasswd  .largefiles  .mcp.json  .ossls.yml  .snyk  .swp  .syft.yaml  3  @  AGENTS.md  AM_I_AFFECTED.md  BAZEL_ACTUAL_STATUS.md  BAZEL_FINAL_DELIVERABLES.md  BAZEL_QUICKSTART.md  BUILD  BUILD.bazel  BUILD.googleapi  BUILD_IMAGE_VERSION  BUILD_OPTIMIZATION_SUMMARY.md  BUILD_QUICK_REF.md  BYTEA_TO_JSONB_ANALYSIS.md  CHANGELOG.md  CI_IMAGE_VERSION  CI_TRIAGE.md  CLAUDE.md  COLLECTOR_VERSION  (+117 more)
bazel_poc/: BUILD.bazel
central/: 1  BUILD.bazel  Makefile  handle_panic.go  main.go
central/alerttest/: BUILD.bazel  alert.go
central/analystnotes/: BUILD.bazel  access_control.go  access_control_test.go  types.go  user.go
central/apirequestlog/: interceptor.go  interceptor_test.go
central/apitoken/: backend.go  constants.go  source.go
central/app/: app.go  init.go
central/audit/: BUILD.bazel  audit.go  audit_test.go
central/backgroundmigrations/: BACKGROUND_MIGRATIONS.md  all.go  registry.go  registry_test.go  rollout.go  rollout_test.go  runner.go  runner_test.go  seq_num.go  types.go
central/billing_metrics/: service.go  service_impl.go  service_impl_test.go  singleton.go
central/billingmetrics/: csv.go  csv_handler.go  csv_test.go  service.go  service_impl.go  service_impl_test.go  singleton.go
central/centralproxy/: Dockerfile  README.md
central/certgen/: BUILD.bazel  central_db.go  central_scanner.go  sensor.go  sensor_test.go  service.go  singleton.go
central/cli/: BUILD.bazel  download.go
central/clusterinit/: bootstrap_token.go
central/clusters/: BUILD.bazel  cert_bundle.go  cert_bundle_test.go  common.go  deployer.go  deployer_test.go  funcs.go  identity.go  identity_test.go  image_overrides.go  kubernetes.go  openshift.go  swarm.go  wrap.go  wrap_test.go
central/comments/: types.go  user.go
central/compliance/: BUILD.bazel  common.go
central/dackbox/: active_component.go  cluster.go  cluster_cve_edge.go  component.go  component_cve_edge.go  cve.go  deployment.go  graph_transforms.go  image.go  image_component_edge.go  image_cve_edge.go  key_transformations.go  namespace.go  node.go  node_component_edge.go  node_cve_edge.go  options.go  resource_paths.go  sac.go  shared_object_sac_filter.go  shared_object_sac_filter_test.go
central/datastore/: alert.go  alert_mock.go  benchmark.go  cluster.go  cluster_mock.go  cluster_test.go  datastore.go  defaults.go  defaults_test.go  deployment.go  deployment_mock.go  image.go  images_mock.go  policy.go
central/db/: db.go  errors.go  mocks.go
central/debugactions/: env.go  exec.go
central/declarativeconfig/: BUILD.bazel  README.md  manager.go  manager_impl.go  manager_impl_test.go  singleton.go  watch_handler.go  watch_handler_test.go
central/delegatedregistryconfig/: delegator.go
central/deploymentenvs/: BUILD.bazel  manager.go  manager_impl.go  singleton.go
central/detection/: BUILD.bazel  compiled_policy.go  detect.go  detector.go  detector_impl.go  image_integration.go  map_gen.go  policy.go  policy_compiler.go  policy_set.go  policy_set_impl.go  policy_set_impl_test.go  process.go  reprocess.go  singleton.go  task.go  types.go  utils.go  utils_test.go  whitelist.go  whitelist_test.go
central/dnr_integration/: dnr_integration.go  version.go
central/dnrintegration/: alerts.go  integration_impl.go  interface.go  mapping.go  services.go  types.go  version.go
central/docs/: BUILD.bazel  api_http.go
compliance/: ACK_MODEL.md  BUILD.bazel  compliance.go  compliance_ack_test.go  compliance_test.go  main.go  vm_relay_retry.go  vm_relay_retry_test.go
config-controller/: BUILD.bazel  Makefile  PROJECT  README.md  main.go
govulncheck/: BUILD.bazel  main.go  main_test.go
image/: .dockerignore  .gitignore  BUILD.bazel  COLLECTOR_VERSION.txt  Dockerfile  Dockerfile_gcp  Dockerfile_rhel  VERSION.txt  a_image-packr.go  central-entrypoint.sh  deploy.sh  download.go  embed_charts.go  embed_charts_test.go  encode-docker-auth.sh  entrypoint.sh  fetch-stackrox-data.sh  packer.go  packer_test.go  roxctl-debug.Dockerfile  roxctl-osci.Dockerfile  roxctl.Dockerfile  schema.yaml.tpl  stackrox-data.Dockerfile  telegraf.conf  telegraf.sh
images/: BUILD.bazel
migrator/: BUILD.bazel  OVERVIEW.md  README.md  STARTUP_MIGRATIONS.md  main.go  upgrade.go  upgrade_amd64.go  upgrade_test.go
ml-risk-service/: .gitignore  COVERAGE_REPORT.md  Dockerfile  Makefile  README.md  docker-compose.yml  learning.md  pyproject.toml  requirements.txt
roxctl/: BUILD.bazel  README.md  main.go  main_test.go  patch_flag_usage.go  patch_pre_run_hooks.go
tests/: BUILD.bazel  Makefile  README.md  active_vuln_test.go  admctrl_configmap_test.go  alert_comments_tags_test.go  alert_tags_test.go  alert_test.go  alerts_test.go  api_kernel_support_available_test.go  api_test.go  backup_test.go  base_image_api_test.go  baseline_test.go  ca_setup_test.go  cert_test.go  client_ca_test.go  cluster_delete_test.go  collector_helpers_test.go  common.go  common_matchers.go  common_test.go  compliance_operator_test.go  compliance_operator_v2_test.go  config_controller_additional_ca_test.go  container_instances_test.go  csv_utils.go  delegated_scanning_test.go  delegated_scanning_test_utils.go  delegated_scanning_utils.go  development_test.go  diagnostics_bundle_test.go  empty.go  endpoints_test.go  enforcement_test.go  excluded_scopes_test.go  external_backup_test.go  feature_flag_test.go  file_activity_helpers_test.go  file_activity_test.go  (+51 more)
tools/: BUILD.bazel  allowed-large-files  check-newlines.sh  ci-bazel.rc  clean_autogen_protos.py  crosspkgimports  detect-large-files.sh  fix-blanks.sh  go-lint.sh  go-vet.sh  import_validate.py  large-git-files.sh  staticcheck-wrap.sh  tag.py  tools-import.go  tools.go
webhookserver/: .gitignore  BUILD.bazel  Dockerfile  scc.yaml  server.go  server.yaml  serviceaccount.yaml
(+31063 files in other folders)
