"""
Bazel module definition for StackRox
Uses Bzlmod (modern module system) for better dependency resolution
"""

module(
    name = "stackrox_rox",
    version = "0.0.0",  # Internal version, not published
    repo_name = "stackrox_rox",
)

# ============================================================================
# Core Build Rules
# ============================================================================

# Go rules for building Go code
# Use repo_name for backward compatibility with WORKSPACE-generated BUILD files
bazel_dep(name = "rules_go", version = "0.50.1", repo_name = "io_bazel_rules_go")

# Gazelle for auto-generating BUILD files
bazel_dep(name = "gazelle", version = "0.39.1", repo_name = "bazel_gazelle")

# Protocol Buffer rules
bazel_dep(name = "protobuf", version = "28.3", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_proto", version = "6.0.2")

# ============================================================================
# Go SDK and Dependencies
# ============================================================================

# Configure Go SDK version to match go.mod (1.24.0)
go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.0")

# Configure Go dependencies from go.mod
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# Configure Gazelle overrides for packages that need BUILD file generation
# Kubernetes packages
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "k8s.io/api",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "k8s.io/apimachinery",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "k8s.io/client-go",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "k8s.io/apiextensions-apiserver",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "k8s.io/apiserver",
)

# OpenShift packages
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "github.com/openshift/api",
)

# gRPC and Google packages
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "google.golang.org/grpc",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "github.com/googleapis/gax-go/v2",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "github.com/cncf/xds/go",
)
go_deps.gazelle_override(
    directives = ["gazelle:proto disable_global"],
    path = "github.com/google/certificate-transparency-go",
)

# Scanner removed from external dependencies - using local code only

# Use all the Go module dependencies
use_repo(
    go_deps,
    "cat_dario_mergo",
    "com_github_adhocore_gronx",
    "com_github_andygrunwald_go_jira",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_feature_ec2_imds",
    "com_github_aws_aws_sdk_go_v2_feature_s3_manager",
    "com_github_aws_aws_sdk_go_v2_service_ecr",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_aws_sdk_go_v2_service_securityhub",
    "com_github_aws_aws_sdk_go_v2_service_sts",
    "com_github_aws_smithy_go",
    "com_github_azure_azure_sdk_for_go_extensions",
    "com_github_azure_azure_sdk_for_go_sdk_azcore",
    "com_github_azure_azure_sdk_for_go_sdk_azidentity",
    "com_github_azure_azure_sdk_for_go_sdk_containers_azcontainerregistry",
    "com_github_azure_azure_sdk_for_go_sdk_monitor_ingestion_azlogs",
    "com_github_burntsushi_toml",
    "com_github_cenkalti_backoff_v3",
    "com_github_cenkalti_backoff_v4",
    "com_github_cespare_xxhash",
    "com_github_cloudflare_cfssl",
    "com_github_cockroachdb_pebble_v2",
    "com_github_complianceascode_compliance_operator",
    "com_github_containers_image_v5",
    "com_github_coreos_go_oidc_v3",
    "com_github_coreos_go_systemd_v22",
    "com_github_dave_jennifer",
    "com_github_davecgh_go_spew",
    "com_github_distribution_reference",
    "com_github_docker_distribution",
    "com_github_facebookincubator_nvdtools",
    "com_github_fatih_color",
    "com_github_georgysavva_scany_v2",
    "com_github_go_jose_go_jose_v4",
    "com_github_go_logr_logr",
    "com_github_go_logr_zapr",
    "com_github_gobwas_glob",
    "com_github_godbus_dbus_v5",
    "com_github_golang_jwt_jwt_v4",
    "com_github_google_certificate_transparency_go",
    "com_github_google_gnostic_models",
    "com_github_google_go_cmp",
    "com_github_google_go_containerregistry",
    "com_github_google_go_github_v60",
    "com_github_google_uuid",
    "com_github_googleapis_gax_go_v2",
    "com_github_gorilla_schema",
    "com_github_grafana_pyroscope_go",
    "com_github_graph_gophers_graphql_go",
    "com_github_grpc_ecosystem_go_grpc_middleware_v2",
    "com_github_grpc_ecosystem_go_grpc_prometheus",
    "com_github_grpc_ecosystem_grpc_gateway_v2",
    "com_github_hashicorp_go_multierror",
    "com_github_hashicorp_go_retryablehttp",
    "com_github_hashicorp_go_version",
    "com_github_hashicorp_golang_lru_v2",
    "com_github_heimdalr_dag",
    "com_github_helm_helm_mapkubeapis",
    "com_github_heroku_docker_registry_client",
    "com_github_jackc_pgx_v5",
    "com_github_jeremywohl_flatten",
    "com_github_joshdk_go_junit",
    "com_github_klauspost_compress",
    "com_github_lib_pq",
    "com_github_machinebox_graphql",
    "com_github_mailru_easyjson",
    "com_github_masterminds_semver",
    "com_github_masterminds_sprig_v3",
    "com_github_mdlayher_vsock",
    "com_github_mitchellh_go_wordwrap",
    "com_github_mitchellh_mapstructure",
    "com_github_np_guard_cluster_topology_analyzer_v2",
    "com_github_np_guard_netpol_analyzer",
    "com_github_nxadm_tail",
    "com_github_nytimes_gziphandler",
    "com_github_olekukonko_tablewriter",
    "com_github_onsi_ginkgo_v2",
    "com_github_onsi_gomega",
    "com_github_opencontainers_go_digest",
    "com_github_opencontainers_image_spec",
    "com_github_openshift_api",
    "com_github_openshift_client_go",
    "com_github_openshift_online_ocm_sdk_go",
    "com_github_openshift_runtime_utils",
    "com_github_operator_framework_helm_operator_plugins",
    "com_github_owenrumney_go_sarif_v2",
    "com_github_pagerduty_go_pagerduty",
    "com_github_pkg_browser",
    "com_github_pkg_errors",
    "com_github_planetscale_vtprotobuf",
    "com_github_pmezard_go_difflib",
    "com_github_prometheus_client_golang",
    "com_github_prometheus_client_model",
    "com_github_prometheus_common",
    "com_github_quay_claircore",
    "com_github_quay_claircore_toolkit",
    "com_github_quay_zlog",
    "com_github_remind101_migrate",
    "com_github_roaringbitmap_roaring",
    "com_github_rs_zerolog",
    "com_github_russellhaering_gosaml2",
    "com_github_russellhaering_goxmldsig",
    "com_github_segmentio_analytics_go_v3",
    "com_github_sergi_go_diff",
    "com_github_shopify_toxiproxy_v2",
    "com_github_sigstore_cosign_v2",
    "com_github_sigstore_rekor",
    "com_github_sigstore_sigstore",
    "com_github_sourcegraph_conc",
    "com_github_spf13_cobra",
    "com_github_spf13_pflag",
    "com_github_spf13_viper",
    "com_github_stackrox_external_network_pusher",
    "com_github_stackrox_hashstructure",
    "com_github_stackrox_helmtest",
    "com_github_stackrox_k8s_overlay_patch",
    "com_github_stackrox_pkcs7",
    "com_github_stackrox_scanner",
    "com_github_stretchr_testify",
    "com_github_tidwall_gjson",
    "com_github_tkuchiki_go_timezone",
    "com_github_travelaudience_go_promhttp",
    "com_github_vbauerster_mpb_v4",
    "com_github_vividcortex_ewma",
    "com_google_cloud_go_artifactregistry",
    "com_google_cloud_go_compute_metadata",
    "com_google_cloud_go_containeranalysis",
    "com_google_cloud_go_securitycenter",
    "com_google_cloud_go_storage",
    "in_gopkg_mcuadros_go_syslog_v2",
    "in_gopkg_natefinch_lumberjack_v2",
    "in_gopkg_robfig_cron_v2",
    "in_yaml_go_yaml_v3",
    "io_gorm_driver_postgres",
    "io_gorm_gorm",
    "io_k8s_api",
    "io_k8s_apiextensions_apiserver",
    "io_k8s_apimachinery",
    "io_k8s_apiserver",
    "io_k8s_cli_runtime",
    "io_k8s_client_go",
    "io_k8s_kubectl",
    "io_k8s_kubelet",
    "io_k8s_sigs_controller_runtime",
    "io_k8s_sigs_controller_tools",
    "io_k8s_sigs_e2e_framework",
    "io_k8s_sigs_yaml",
    "io_k8s_utils",
    "io_kubevirt_api",
    "io_stackrox_golang_grpc_http1",
    "org_golang_google_api",
    "org_golang_google_genproto",
    "org_golang_google_genproto_googleapis_api",
    "org_golang_google_grpc",
    "org_golang_google_grpc_examples",
    "org_golang_google_protobuf",
    "org_golang_x_crypto",
    "org_golang_x_mod",
    "org_golang_x_net",
    "org_golang_x_oauth2",
    "org_golang_x_sync",
    "org_golang_x_sys",
    "org_golang_x_term",
    "org_golang_x_text",
    "org_golang_x_time",
    "org_golang_x_tools",
    "org_uber_go_atomic",
    "org_uber_go_goleak",
    "org_uber_go_mock",
    "org_uber_go_zap",
    "sh_helm_helm_v3",
    # Bazelprovides these automatically from go.mod
    # We'll let it auto-populate
)

# ============================================================================
# Development Tools (Optional)
# ============================================================================

# Buildifier for formatting BUILD files
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1", dev_dependency = True)

# ============================================================================
# Additional Rules (Phase 2+)
# ============================================================================

# Container/OCI rules for building Docker images
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "rules_pkg", version = "1.0.1")

# Configure OCI for pulling and building images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Pull distroless base image (simpler for testing)
oci.pull(
    name = "distroless_base",
    image = "gcr.io/distroless/static-debian12",
    platforms = ["linux/amd64", "linux/arm64"],
    tag = "latest",
)

use_repo(oci, "distroless_base", "distroless_base_linux_amd64", "distroless_base_linux_arm64")

# Node.js rules - will be added in Phase 4
# bazel_dep(name = "aspect_rules_js", version = "2.1.0")

# Python rules - will be added in Phase 5
# bazel_dep(name = "rules_python", version = "1.0.0")

# ============================================================================
# Non-Module Dependencies (if any)
# ============================================================================

# For dependencies not in Bazel Central Registry, we can use:
# - git_override
# - archive_override
# - local_path_override

# Scanner circular dependency remains an issue with Bzlmod visibility
# For now, we'll work around it or build targets that don't need scanner
