load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "central_lib",
    srcs = ["main.go"],
    importpath = "github.com/stackrox/rox/central",
    visibility = ["//visibility:private"],
    deps = [
        "//central/administration/events/datastore",
        "//central/administration/events/handler",
        "//central/administration/events/service",
        "//central/administration/usage/csv",
        "//central/administration/usage/datastore/securedunits",
        "//central/administration/usage/injector",
        "//central/administration/usage/service",
        "//central/alert/datastore",
        "//central/alert/service",
        "//central/apitoken/datastore",
        "//central/apitoken/expiration",
        "//central/apitoken/service",
        "//central/audit",
        "//central/auth/datastore",
        "//central/auth/service",
        "//central/auth/userpass",
        "//central/authprovider/registry",
        "//central/authprovider/service",
        "//central/authprovider/telemetry",
        "//central/centralhealth/service",
        "//central/certgen",
        "//central/certs/handlers",
        "//central/cli",
        "//central/cloudproviders/gcp",
        "//central/cloudsources/datastore",
        "//central/cloudsources/manager",
        "//central/cloudsources/service",
        "//central/cluster/datastore",
        "//central/cluster/service",
        "//central/clusterinit/backend",
        "//central/clusterinit/service",
        "//central/clusters/helmconfig",
        "//central/clusters/zip",
        "//central/compliance/datastore",
        "//central/compliance/handlers",
        "//central/compliance/manager/service",
        "//central/compliance/service",
        "//central/complianceoperator/v2/benchmarks/datastore",
        "//central/complianceoperator/v2/checkresults/service",
        "//central/complianceoperator/v2/checkresults/stats/service",
        "//central/complianceoperator/v2/compliancemanager",
        "//central/complianceoperator/v2/integration/service",
        "//central/complianceoperator/v2/profiles/service",
        "//central/complianceoperator/v2/report/manager",
        "//central/complianceoperator/v2/rules/service",
        "//central/complianceoperator/v2/scanconfigurations/datastore",
        "//central/complianceoperator/v2/scanconfigurations/service",
        "//central/config/datastore",
        "//central/config/service",
        "//central/credentialexpiry/service",
        "//central/cve/cluster/csv",
        "//central/cve/cluster/service",
        "//central/cve/csv",
        "//central/cve/fetcher",
        "//central/cve/image/csv",
        "//central/cve/node/csv",
        "//central/cve/node/service",
        "//central/cve/suppress",
        "//central/debug/service",
        "//central/declarativeconfig",
        "//central/declarativeconfig/health/service",
        "//central/delegatedregistryconfig/datastore",
        "//central/delegatedregistryconfig/service",
        "//central/deployment/datastore",
        "//central/deployment/service",
        "//central/detection/service",
        "//central/development/service",
        "//central/discoveredclusters/service",
        "//central/docs",
        "//central/endpoints",
        "//central/enrichment",
        "//central/externalbackups/datastore",
        "//central/externalbackups/plugins/all",
        "//central/externalbackups/service",
        "//central/externalbackups/service/externaldb",
        "//central/featureflags/service",
        "//central/globaldb",
        "//central/globaldb/authz",
        "//central/globaldb/handlers",
        "//central/globaldb/v2backuprestore/service",
        "//central/graphql/handler",
        "//central/group/datastore",
        "//central/group/service",
        "//central/grpc/metrics",
        "//central/grpcpreference/service",
        "//central/helmcharts",
        "//central/image/datastore",
        "//central/image/service",
        "//central/imageintegration",
        "//central/imageintegration/datastore",
        "//central/imageintegration/service",
        "//central/imageintegration/store",
        "//central/installation/store",
        "//central/integrationhealth/service",
        "//central/internal",
        "//central/jwt",
        "//central/logimbue/handler",
        "//central/metadata/service",
        "//central/metrics/custom",
        "//central/metrics/telemetry",
        "//central/mitre/service",
        "//central/namespace/service",
        "//central/networkbaseline/datastore",
        "//central/networkbaseline/service",
        "//central/networkgraph/entity/datastore",
        "//central/networkgraph/entity/gatherer",
        "//central/networkgraph/service",
        "//central/networkpolicies/service",
        "//central/node/service",
        "//central/notifier/datastore",
        "//central/notifier/processor",
        "//central/notifier/service",
        "//central/notifiers/all",
        "//central/ping/service",
        "//central/platform/reprocessor",
        "//central/pod/service",
        "//central/policy/datastore",
        "//central/policy/handlers",
        "//central/policy/service",
        "//central/policycategory/service",
        "//central/probeupload/service",
        "//central/processbaseline/datastore",
        "//central/processbaseline/service",
        "//central/processindicator/service",
        "//central/processlisteningonport/service",
        "//central/pruning",
        "//central/rbac/service",
        "//central/reports/scheduler/v2:scheduler",
        "//central/reports/service/v2:service",
        "//central/reprocessor",
        "//central/resourcecollection/service",
        "//central/risk/handlers/timeline",
        "//central/risk/manager",
        "//central/role/datastore",
        "//central/role/sachelper",
        "//central/role/service",
        "//central/sac",
        "//central/scanner",
        "//central/scannerdefinitions/handler",
        "//central/search/service",
        "//central/secret/service",
        "//central/sensor/service",
        "//central/sensor/service/connection",
        "//central/sensor/service/pipeline/all",
        "//central/sensorupgrade/controlservice",
        "//central/sensorupgrade/service",
        "//central/serviceaccount/service",
        "//central/serviceidentities/datastore",
        "//central/serviceidentities/service",
        "//central/signatureintegration/datastore",
        "//central/signatureintegration/service",
        "//central/splunk",
        "//central/systeminfo/listener",
        "//central/telemetry/centralclient",
        "//central/telemetry/service",
        "//central/tlsconfig",
        "//central/trace",
        "//central/ui",
        "//central/user/service",
        "//central/version",
        "//central/version/store",
        "//central/version/utils",
        "//central/virtualmachine/datastore",
        "//central/virtualmachine/service",
        "//central/vulnmgmt/service",
        "//central/vulnmgmt/vulnerabilityrequest/manager/requestmgr",
        "//central/vulnmgmt/vulnerabilityrequest/service",
        "//central/vulnmgmt/vulnerabilityrequest/service/v2:service",
        "//generated/storage",
        "//pkg/auth/authproviders",
        "//pkg/auth/authproviders/iap",
        "//pkg/auth/authproviders/oidc",
        "//pkg/auth/authproviders/openshift",
        "//pkg/auth/authproviders/saml",
        "//pkg/auth/authproviders/userpki",
        "//pkg/auth/permissions",
        "//pkg/clientconn",
        "//pkg/concurrency",
        "//pkg/config",
        "//pkg/continuousprofiling",
        "//pkg/defaults/accesscontrol",
        "//pkg/devbuild",
        "//pkg/devmode",
        "//pkg/env",
        "//pkg/features",
        "//pkg/features/telemetry",
        "//pkg/grpc",
        "//pkg/grpc/authn",
        "//pkg/grpc/authn/service",
        "//pkg/grpc/authn/servicecerttoken",
        "//pkg/grpc/authn/tokenbased",
        "//pkg/grpc/authn/userpki",
        "//pkg/grpc/authz",
        "//pkg/grpc/authz/allow",
        "//pkg/grpc/authz/idcheck",
        "//pkg/grpc/authz/or",
        "//pkg/grpc/authz/perrpc",
        "//pkg/grpc/authz/user",
        "//pkg/grpc/errors",
        "//pkg/grpc/ratelimit",
        "//pkg/grpc/routes",
        "//pkg/httputil/proxy",
        "//pkg/logging",
        "//pkg/memlimit",
        "//pkg/metrics",
        "//pkg/migrations",
        "//pkg/osutils",
        "//pkg/postgres/pgadmin",
        "//pkg/postgres/pgconfig",
        "//pkg/premain",
        "//pkg/sac",
        "//pkg/sac/observe",
        "//pkg/sac/resources",
        "//pkg/sync",
        "//pkg/utils",
        "//pkg/version",
        "@com_github_nytimes_gziphandler//:gziphandler",
    ],
)

go_binary(
    name = "central",
    embed = [":central_lib"],
    visibility = ["//visibility:public"],
)
