load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "config-controller_lib",
    srcs = ["main.go"],
    importpath = "github.com/stackrox/rox/config-controller",
    visibility = ["//visibility:private"],
    deps = [
        "//config-controller/api/v1alpha1",
        "//config-controller/internal/controller",
        "//config-controller/pkg/client",
        "//pkg/env",
        "//pkg/logging",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_client_go//plugin/pkg/client/auth",
        "@io_k8s_client_go//rest",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/cache",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/filters",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
        "@io_k8s_sigs_controller_runtime//pkg/webhook",
    ],
)

go_binary(
    name = "config-controller",
    embed = [":config-controller_lib"],
    visibility = ["//visibility:public"],
)
